<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".ZumoControl">
    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:background="@color/colorWhite"
            card_view:cardCornerRadius="4dp">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                        <com.airbnb.lottie.LottieAnimationView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                android:id="@+id/av_status"/>
                        <TextView
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="20sp"
                                android:text="@string/status"/>
                    </LinearLayout>
                    <TextView
                            android:id="@+id/status"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:text="@string/connecting"/>
                    <Button
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:visibility="gone"
                            android:id="@+id/btnReconnect"
                            android:layout_width="0dp"
                            android:layout_weight=".6"
                            android:padding="8dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="4dp"
                            android:drawableStart="@drawable/ic_replay_24dp"
                            android:background="@drawable/circle_button_shape"
                            android:layout_height="35dp"/>
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:drawableStart="@drawable/ic_axis_24dp"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="20sp"
                                android:text="@string/z_axis"/>
                        <TextView
                                android:id="@+id/tv_z"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:text="@string/_0"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:drawableStart="@drawable/ic_axis_24dp"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="20sp"
                                android:text="@string/y_axis"/>
                        <TextView
                                android:id="@+id/tv_y"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:text="@string/_0"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:drawableStart="@drawable/ic_speed_24dp"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="20sp"
                                android:text="@string/left_speed"/>
                        <TextView
                                android:id="@+id/tv_motor_left"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:text="@string/_0"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:drawableStart="@drawable/ic_speed_24dp"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="20sp"
                                android:text="@string/right_speed"/>
                        <TextView
                                android:id="@+id/tv_motor_right"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:text="@string/_0"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:drawableStart="@drawable/ic_cogwheel_24dp"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="20sp"
                                android:text="@string/current_state"/>
                        <TextView
                                android:id="@+id/tv_state"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:text="@string/stop"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <Button
                                android:id="@+id/btnStartStop"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/start"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="30sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorWhite"
                                android:background="@drawable/rounded_button_shape"/>

                        <Button
                                android:id="@+id/btnMode"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/auto"
                                android:fontFamily="@font/ubuntu"
                                android:textSize="30sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorWhite"
                                android:background="@drawable/rounded_button_shape"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_zumolist"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>